--- a/doc/agile/sprint_backlog_90.org
+++ b/doc/agile/sprint_backlog_90.org
@@ -14,14 +14,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-10-17 Mon 10:47]
+#+CAPTION: Clock summary at [2016-10-17 Mon 10:59]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *60:08* |       |       | 100.0 |
+| *Total time*                                                                | *60:19* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 60:08   |       |       | 100.0 |
-| Active                                                                      |         | 60:08 |       | 100.0 |
+| Stories                                                                     | 60:19   |       |       | 100.0 |
+| Active                                                                      |         | 60:19 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  0:32 |   0.9 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:19 |   0.5 |
 | COMPLETED Improve bintray support                                           |         |       |  0:26 |   0.7 |
@@ -30,11 +30,11 @@
 | COMPLETED Solve the issue of too many "configurations"                      |         |       |  4:01 |   6.7 |
 | COMPLETED Merge decoration configuration and annotations factories          |         |       |  0:18 |   0.5 |
 | COMPLETED Move annotation factories into expander in yarn                   |         |       |  1:11 |   2.0 |
-| COMPLETED Clean up terminology in dynamic                                   |         |       | 15:12 |  25.3 |
+| COMPLETED Clean up terminology in dynamic                                   |         |       | 15:12 |  25.2 |
 | COMPLETED Minor tidy-up of the quilt.cpp diagram                            |         |       |  0:29 |   0.8 |
-| COMPLETED Create a ownership hierarchy repository                           |         |       |  1:43 |   2.9 |
+| COMPLETED Create a ownership hierarchy repository                           |         |       |  1:43 |   2.8 |
 | COMPLETED Use vector of elements in model                                   |         |       |  0:10 |   0.3 |
-| COMPLETED Rewrite profile support                                           |         |       | 11:50 |  19.7 |
+| COMPLETED Rewrite profile support                                           |         |       | 11:50 |  19.6 |
 | COMPLETED Merge annotation type and profile folders                         |         |       |  0:20 |   0.6 |
 | COMPLETED Push stereotypes processing into yarn                             |         |       |  1:51 |   3.1 |
 | COMPLETED Implement defaulting within the profiler                          |         |       |  1:13 |   2.0 |
@@ -45,8 +45,8 @@
 | COMPLETED IOable services                                                   |         |       |  0:06 |   0.2 |
 | COMPLETED Generate skeleton for "non-generatable" files                     |         |       |  0:51 |   1.4 |
 | COMPLETED Merge profiles with processed object in yarn.dia                  |         |       |  2:04 |   3.4 |
-| COMPLETED Fix yarn.dia tests                                                |         |       |  2:48 |   4.7 |
-| STARTED Perform the archetype / artefact renames                            |         |       |  4:46 |   7.9 |
+| COMPLETED Fix yarn.dia tests                                                |         |       |  2:48 |   4.6 |
+| STARTED Perform the archetype / artefact renames                            |         |       |  4:57 |   8.2 |
 | STARTED Integration of stitch and dogen                                     |         |       |  0:27 |   0.7 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
@@ -646,6 +646,7 @@ within the parser. It makes more sense to keep the parser clean and do
 the expansion somewhere else.
 
 *** STARTED Perform the archetype / artefact renames                  :story:
+    CLOCK: [2016-10-17 Mon 10:48]--[2016-10-17 Mon 10:59] =>  0:11
     CLOCK: [2016-10-17 Mon 10:37]--[2016-10-17 Mon 10:47] =>  0:10
     CLOCK: [2016-10-17 Mon 10:32]--[2016-10-17 Mon 10:36] =>  0:04
     CLOCK: [2016-10-17 Mon 10:16]--[2016-10-17 Mon 10:31] =>  0:15
