--- a/doc/agile/sprint_backlog_90.org
+++ b/doc/agile/sprint_backlog_90.org
@@ -14,14 +14,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-10-17 Mon 11:22]
+#+CAPTION: Clock summary at [2016-10-17 Mon 11:29]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *60:41* |       |       | 100.0 |
+| *Total time*                                                                | *60:47* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 60:41   |       |       | 100.0 |
-| Active                                                                      |         | 60:41 |       | 100.0 |
+| Stories                                                                     | 60:47   |       |       | 100.0 |
+| Active                                                                      |         | 60:47 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  0:32 |   0.9 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:19 |   0.5 |
 | COMPLETED Improve bintray support                                           |         |       |  0:26 |   0.7 |
@@ -29,7 +29,7 @@
 | COMPLETED Remove any remnants of annotations from quilt                     |         |       |  0:05 |   0.1 |
 | COMPLETED Solve the issue of too many "configurations"                      |         |       |  4:01 |   6.6 |
 | COMPLETED Merge decoration configuration and annotations factories          |         |       |  0:18 |   0.5 |
-| COMPLETED Move annotation factories into expander in yarn                   |         |       |  1:11 |   2.0 |
+| COMPLETED Move annotation factories into expander in yarn                   |         |       |  1:11 |   1.9 |
 | COMPLETED Clean up terminology in dynamic                                   |         |       | 15:12 |  25.0 |
 | COMPLETED Minor tidy-up of the quilt.cpp diagram                            |         |       |  0:29 |   0.8 |
 | COMPLETED Create a ownership hierarchy repository                           |         |       |  1:43 |   2.8 |
@@ -46,7 +46,7 @@
 | COMPLETED Generate skeleton for "non-generatable" files                     |         |       |  0:51 |   1.4 |
 | COMPLETED Merge profiles with processed object in yarn.dia                  |         |       |  2:04 |   3.4 |
 | COMPLETED Fix yarn.dia tests                                                |         |       |  2:48 |   4.6 |
-| STARTED Perform the archetype / artefact renames                            |         |       |  5:19 |   8.8 |
+| STARTED Perform the archetype / artefact renames                            |         |       |  5:25 |   8.9 |
 | STARTED Integration of stitch and dogen                                     |         |       |  0:27 |   0.7 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
@@ -646,6 +646,7 @@ within the parser. It makes more sense to keep the parser clean and do
 the expansion somewhere else.
 
 *** STARTED Perform the archetype / artefact renames                  :story:
+    CLOCK: [2016-10-17 Mon 11:23]--[2016-10-17 Mon 11:29] =>  0:06
     CLOCK: [2016-10-17 Mon 11:00]--[2016-10-17 Mon 11:22] =>  0:22
     CLOCK: [2016-10-17 Mon 10:48]--[2016-10-17 Mon 10:59] =>  0:11
     CLOCK: [2016-10-17 Mon 10:37]--[2016-10-17 Mon 10:47] =>  0:10
