--- a/doc/agile/sprint_backlog_90.org
+++ b/doc/agile/sprint_backlog_90.org
@@ -14,14 +14,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-10-17 Mon 12:29]
+#+CAPTION: Clock summary at [2016-10-17 Mon 12:33]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *61:41* |       |       | 100.0 |
+| *Total time*                                                                | *61:44* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 61:41   |       |       | 100.0 |
-| Active                                                                      |         | 61:41 |       | 100.0 |
+| Stories                                                                     | 61:44   |       |       | 100.0 |
+| Active                                                                      |         | 61:44 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  0:32 |   0.9 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:19 |   0.5 |
 | COMPLETED Improve bintray support                                           |         |       |  0:26 |   0.7 |
@@ -44,9 +44,9 @@
 | COMPLETED Remove service stereotype                                         |         |       |  3:32 |   5.7 |
 | COMPLETED IOable services                                                   |         |       |  0:06 |   0.2 |
 | COMPLETED Generate skeleton for "non-generatable" files                     |         |       |  0:51 |   1.4 |
-| COMPLETED Merge profiles with processed object in yarn.dia                  |         |       |  2:04 |   3.4 |
+| COMPLETED Merge profiles with processed object in yarn.dia                  |         |       |  2:04 |   3.3 |
 | COMPLETED Fix yarn.dia tests                                                |         |       |  2:48 |   4.5 |
-| STARTED Perform the archetype / artefact renames                            |         |       |  6:19 |  10.2 |
+| STARTED Perform the archetype / artefact renames                            |         |       |  6:22 |  10.3 |
 | STARTED Integration of stitch and dogen                                     |         |       |  0:27 |   0.7 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
@@ -646,6 +646,7 @@ within the parser. It makes more sense to keep the parser clean and do
 the expansion somewhere else.
 
 *** STARTED Perform the archetype / artefact renames                  :story:
+    CLOCK: [2016-10-17 Mon 12:30]--[2016-10-17 Mon 12:33] =>  0:03
     CLOCK: [2016-10-17 Mon 12:16]--[2016-10-17 Mon 12:29] =>  0:13
     CLOCK: [2016-10-17 Mon 12:11]--[2016-10-17 Mon 12:15] =>  0:04
     CLOCK: [2016-10-17 Mon 12:04]--[2016-10-17 Mon 12:10] =>  0:06
