--- a/doc/agile/sprint_backlog_90.org
+++ b/doc/agile/sprint_backlog_90.org
@@ -14,27 +14,27 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-10-17 Mon 13:01]
+#+CAPTION: Clock summary at [2016-10-17 Mon 16:24]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *62:06* |       |       | 100.0 |
+| *Total time*                                                                | *62:20* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 62:06   |       |       | 100.0 |
-| Active                                                                      |         | 62:06 |       | 100.0 |
+| Stories                                                                     | 62:20   |       |       | 100.0 |
+| Active                                                                      |         | 62:20 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  0:32 |   0.9 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:19 |   0.5 |
 | COMPLETED Improve bintray support                                           |         |       |  0:26 |   0.7 |
 | COMPLETED Refactor opaque infrastructure                                    |         |       |  1:17 |   2.1 |
 | COMPLETED Remove any remnants of annotations from quilt                     |         |       |  0:05 |   0.1 |
-| COMPLETED Solve the issue of too many "configurations"                      |         |       |  4:01 |   6.5 |
+| COMPLETED Solve the issue of too many "configurations"                      |         |       |  4:01 |   6.4 |
 | COMPLETED Merge decoration configuration and annotations factories          |         |       |  0:18 |   0.5 |
 | COMPLETED Move annotation factories into expander in yarn                   |         |       |  1:11 |   1.9 |
-| COMPLETED Clean up terminology in dynamic                                   |         |       | 15:12 |  24.5 |
+| COMPLETED Clean up terminology in dynamic                                   |         |       | 15:12 |  24.4 |
 | COMPLETED Minor tidy-up of the quilt.cpp diagram                            |         |       |  0:29 |   0.8 |
 | COMPLETED Create a ownership hierarchy repository                           |         |       |  1:43 |   2.8 |
 | COMPLETED Use vector of elements in model                                   |         |       |  0:10 |   0.3 |
-| COMPLETED Rewrite profile support                                           |         |       | 11:50 |  19.1 |
+| COMPLETED Rewrite profile support                                           |         |       | 11:50 |  19.0 |
 | COMPLETED Merge annotation type and profile folders                         |         |       |  0:20 |   0.5 |
 | COMPLETED Push stereotypes processing into yarn                             |         |       |  1:51 |   3.0 |
 | COMPLETED Implement defaulting within the profiler                          |         |       |  1:13 |   2.0 |
@@ -46,7 +46,7 @@
 | COMPLETED Generate skeleton for "non-generatable" files                     |         |       |  0:51 |   1.4 |
 | COMPLETED Merge profiles with processed object in yarn.dia                  |         |       |  2:04 |   3.3 |
 | COMPLETED Fix yarn.dia tests                                                |         |       |  2:48 |   4.5 |
-| STARTED Perform the archetype / artefact renames                            |         |       |  6:44 |  10.8 |
+| STARTED Perform the archetype / artefact renames                            |         |       |  6:58 |  11.2 |
 | STARTED Integration of stitch and dogen                                     |         |       |  0:27 |   0.7 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
@@ -646,6 +646,7 @@ within the parser. It makes more sense to keep the parser clean and do
 the expansion somewhere else.
 
 *** STARTED Perform the archetype / artefact renames                  :story:
+    CLOCK: [2016-10-17 Mon 16:10]--[2016-10-17 Mon 16:24] =>  0:14
     CLOCK: [2016-10-17 Mon 12:47]--[2016-10-17 Mon 12:58] =>  0:11
     CLOCK: [2016-10-17 Mon 12:41]--[2016-10-17 Mon 12:46] =>  0:05
     CLOCK: [2016-10-17 Mon 12:34]--[2016-10-17 Mon 12:40] =>  0:06
